# copyfighter

./: .gitignore  README.md
backend/: Dockerfile  extensions.py  init.py  pyproject.toml  update.py
discord/: main.py  pyproject.toml  ui.py
frontend/: extensions.py  main.py  pyproject.toml  ui.py
youtube/: extensions.py  init.sql  main.py  pyproject.toml  update.py
