[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudflare>=3.1.1",
    "discord-webhook>=1.3.1",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
    "structlog>=24.4.0",
    "youtube-up>=0.5.6",
]
